namespace FrutNatura.Form.Models
{
    public enum StatusChamado
    {
        Aberto = 0,
        EmAtendimento = 1,
        Fechado = 2
    }

    public enum Prioridade
    {
        Baixa = 0,
        Normal = 1,
        Alta = 2,
        Critica = 3
    }
}
