namespace FrutNatura.Infra.Persistence;


public abstract class RepositoryBase<TEntity>
    where TEntity : class
{
   
}
